# LoftinBot

./: .gitpod.yml  README.md  README.rst  assistant.py  const.py  helpers.py  main.py  pyproject.toml  requirements.txt
LoftinBot/: pyproject.toml
LoftinBot/loftinbot/: main.py
loftinbot/: __init__.py  assistant.py  helpers.py  main.py
tests/: test_loftinbot.py
