[tool.poetry]
name = "LoftinBot"
version = "0.1.0"
description = ""
authors = ["Micah Loftin <micahbl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
cachetools = "5.2.0"
click = "8.1.3"
discord = "2.0.0"
"discord.py" = "2.0.1"
frozenlist = "1.3.1"
google-api-core = "2.8.2"
google-api-python-client = "2.58.0"
google-assistant-grpc = "0.3.0"
google-auth = "2.11.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.5.2"
googleapis-common-protos = "1.56.4"
grpcio = "1.47.0"
httplib2 = "0.20.4"
multidict = "6.0.2"
oauthlib = "3.2.0"
protobuf = "3.20.1"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
requests-oauthlib = "1.3.1"
rsa = "4.9"
uritemplate = "4.1.1"
yarl = "1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
